manifest.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: sample-webhook
  annotations:
    cert-manager.io/inject-ca-from: default/server-certificate
webhooks:
- name: sample-webhook.default.svc
  admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: Cg==
    service:
      name: sample-webhook
      namespace: default
      path: /validate
      port: 443
  sideEffects: None
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-webhook
spec:
  selector:
    matchLabels:
      app: sample-webhook
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-webhook
    spec:
      containers:
        - command:
          - /sample-webhook
          image: webhook:latest
          name: sample-webhook
          ports:
          - containerPort: 8080
            name: http
          volumeMounts:
          - mountPath: /tmp/k8s-webhook-server/serving-certs
            name: cert
            readOnly: true
          resources:
            limits:
              cpu: 100m
              memory: 30Mi
            requests:
              cpu: 100m
              memory: 20Mi
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: server-certificate
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: sample-webhook
spec:
  ports:
    - port: 443
      targetPort: 8080
  selector:
    app: sample-webhook
